First working nhoods list version

--- a/app/index.html
+++ b/app/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
 
-<div id="app_container"></div>
+    <div id="app_container"></div>
+    <script src="js/app.bundle.js"></script>
 
-<script src="/app"></script>
 </body>
 </html>
